--- a/main.html
+++ b/main.html
@@ -11,7 +11,8 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<h1> Favorite Holiday</h1>
-	<p>Paris <br>often called “The City of Light,” is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
+	<br>
+	<p>Paris often called “The City of Light,” is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
 	<ol>
 		<li>Eiffle Tower</li>
 		<li>Louvre Museum</li>
