--- a/main.html
+++ b/main.html
@@ -11,8 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<h1> Favorite Holiday</h1>
-	<br>
+	
 	<p>Paris often called “The City of Light,” is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
+	<h2>Top 5 Attractive Places in Paris</h2>
 	<ol>
 		<li>Eiffle Tower</li>
 		<li>Louvre Museum</li>
@@ -20,6 +21,7 @@
 		<li>Champs ELysees Arc de Triomphe</li>
 		<li>Montmatre Sacre Coeur Basilicia</li>
 	</ol>
+	<h3>Top Must try foods in Paris</h3>
 	<ul>
 		<li>Croissant</li>
 		<li>Crepes</li>
