--- a/main.html
+++ b/main.html
@@ -15,19 +15,19 @@
 	<p>Paris often called “The City of Light,” is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
 	<h2>Top 5 Attractive Places in Paris</h2>
 	<ol>
-		<li>Eiffle Tower</li>
-		<li>Louvre Museum</li>
-		<li>Nore Dame Cathedral</li>
-		<li>Champs ELysees Arc de Triomphe</li>
-		<li>Montmatre Sacre Coeur Basilicia</li>
+		<li><strong>Eiffle Tower</strong></li>
+		<li><em>Louvre Musem</em></li>
+		<li><strong>Nore Dam Cathedral</strong></li>
+		<li><strong>Champs ELysees Arc de Triomphe</strong></li>
+		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
 	</ol>
 	<h3>Top Must try foods in Paris</h3>
 	<ul>
-		<li>Croissant</li>
-		<li>Crepes</li>
-		<li>Baguette</li>
-		<li>Macarons</li>
-		<li>Escargots</li>
+		<li><em>Croissant</em></li>
+		<li><strong>Crepes</strong></li>
+		<li><em>Baguette</em></li>
+		<li><strong>Macarons</strong</li>
+		<li><em>Escargots</em></li>
 	</ul>
 </body>
 
