--- a/main.html
+++ b/main.html
@@ -12,12 +12,12 @@
 </script>
 	<h1> Favorite Holiday</h1>
 	
-	<p>Paris often called “The City of Light,” is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
-	<h2>Top 5 Attractive Places in Paris</h2>
+	<p>Paris, often called <strong>The City of Light</strong> is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
+	<h2>Top 5 Attraction Places in Paris</h2>
 	<ol>
-		<li><strong>Eiffle Tower</strong></li>
+		<li><strong>Eiffel Tower</strong></li>
 		<li><em>Louvre Musem</em></li>
-		<li><strong>Nore Dam Cathedral</strong></li>
+		<li><strong>Notre Dam Cathedral</strong></li>
 		<li><strong>Champs ELysees Arc de Triomphe</strong></li>
 		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
 	</ol>
