--- a/main.html
+++ b/main.html
@@ -21,7 +21,7 @@
 		<li><strong>Champs ELysees Arc de Triomphe</strong></li>
 		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
 	</ol>
-	<h3>Top Must try foods in Paris</h3>
+	<h3>Must try foods in Paris</h3>
 	<ul>
 		<li><em>Croissant</em></li>
 		<li><strong>Crepes</strong></li>
