--- a/main.html
+++ b/main.html
@@ -11,13 +11,13 @@
     <script type="text/javascript" src="./script.js">
 </script>
 	<h1>Paris</h1>
-	
+	<br>
 	<p>Paris, often called <strong>The City of Light</strong> is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
-	<h2>Top 5 Attraction Places in Paris</h2>
+	<h2>Top 5 Attractions in Paris</h2>
 	<ol>
 		<li><strong>Eiffel Tower</strong></li>
-		<li><em>Louvre Musem</em></li>
-		<li><strong>Notre Dam Cathedral</strong></li>
+		<li><em>Louvre Museum</em></li>
+		<li><strong>Notre Dame Cathedral</strong></li>
 		<li><strong>Champs ELysees Arc de Triomphe</strong></li>
 		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
 	</ol>
@@ -26,7 +26,7 @@
 		<li><em>Croissant</em></li>
 		<li><strong>Crepes</strong></li>
 		<li><em>Baguette</em></li>
-		<li><strong>Macarons</strong</li>
+		<li><strong>Macarons</strong></li>
 		<li><em>Escargots</em></li>
 	</ul>
 </body>
