--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </script>
 	<h1>Paris</h1>
 	<br>
-	<p>Paris, often called <strong>The City of Light</strong> is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
+	<p>Paris, often called <strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
 	<h2>Top 5 Attractions in Paris</h2>
 	<ol>
 		<li><strong>Eiffel Tower</strong></li>
@@ -21,7 +21,7 @@
 		<li><strong>Champs ELysees Arc de Triomphe</strong></li>
 		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
 	</ol>
-	<h3>Must try foods in Paris</h3>
+	<h2>Must-try foods in Paris</h3>
 	<ul>
 		<li><em>Croissant</em></li>
 		<li><strong>Crepes</strong></li>
