--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
 		<li><strong>Eiffel Tower</strong></li>
 		<li><em>Louvre Museum</em></li>
 		<li><strong>Notre Dame Cathedral</strong></li>
-		<li><strong>Champs ELysees Arc de Triomphe</strong></li>
+		<li><strong>Champs-Élysées & Arc de Triomphe”</strong></li>
 		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
 	</ol>
-	<h2>Must-try foods in Paris</h3>
+	<h2>Must-Try Foods in Paris</h2>
 	<ul>
 		<li><em>Croissant</em></li>
 		<li><strong>Crepes</strong></li>
