--- a/main.html
+++ b/main.html
@@ -18,7 +18,7 @@
 		<li><strong>Eiffel Tower</strong></li>
 		<li><em>Louvre Museum</em></li>
 		<li><strong>Notre Dame Cathedral</strong></li>
-		<li><strong>Champs-Élysées & Arc de Triomphe”</strong></li>
+		<li><strong>Champs-Élysées & Arc de Triomphe</strong></li>
 		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
 	</ol>
 	<h2>Must-Try Foods in Paris</h2>
