--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>Paris</h1>
+	<h1>Favorite Holiday</h1>
 	<br>
 	<p>Paris, often called <strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
 	<ol>
