--- a/main.html
+++ b/main.html
@@ -10,23 +10,29 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
-	<h1>Favorite Holiday</h1>
-	<br>
-	<p>Paris, often called <strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.</p>
-	<ol>
-		<li><strong>Eiffel Tower</strong></li>
-		<li><em>Louvre Museum</em></li>
-		<li><strong>Notre Dame Cathedral</strong></li>
-		<li><strong>Champs-Élysées & Arc de Triomphe</strong></li>
-		<li><em>Montmatre Sacre Coeur Basilicia</em></li>
-	</ol>
-	<ul>
-		<li><em>Croissant</em></li>
-		<li><strong>Crepes</strong></li>
-		<li><em>Baguette</em></li>
-		<li><strong>Macarons</strong></li>
-		<li><em>Escargots</em></li>
-	</ul>
+ <h1>Paris</h1>
+  <br>
+  <p>
+    Paris, often called <strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
+    It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. 
+    Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.
+  </p>
+
+  <ol>
+    <li><strong>Eiffel Tower</strong></li>
+    <li><em>Louvre Museum</em></li>
+    <li><strong>Notre Dame Cathedral</strong></li>
+    <li><em>Champs-Élysées & Arc de Triomphe</em></li>
+    <li><strong>Montmartre & Sacré-Cœur Basilica</strong></li>
+  </ol>
+
+  <ul>
+    <li><em>Croissant</em></li>
+    <li><strong>Crêpes</strong></li>
+    <li><em>Baguette</em></li>
+    <li><strong>Macarons</strong></li>
+    <li><em>Escargots</em></li>
+  </ul>
 </body>
 
 </html>
