--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@
  <h1>Paris</h1>
   <br>
   <p>
-    Paris, often called <strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
+    Paris, often called The City of Light, is one of the most beautiful and romantic cities in the world. 
     It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. 
     Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.
   </p>
@@ -21,17 +21,17 @@
   <ol>
     <li><strong>Eiffel Tower</strong></li>
     <li><em>Louvre Museum</em></li>
-    <li><strong>Notre Dame Cathedral</strong></li>
-    <li><em>Champs-Élysées & Arc de Triomphe</em></li>
-    <li><strong>Montmartre & Sacré-Cœur Basilica</strong></li>
+    <li>Notre Dame Cathedral</li>
+    <li>Champs-Élysées & Arc de Triomphe</li>
+    <li>Montmartre & Sacré-Cœur Basilica</li>
   </ol>
 
   <ul>
     <li><em>Croissant</em></li>
     <li><strong>Crêpes</strong></li>
-    <li><em>Baguette</em></li>
-    <li><strong>Macarons</strong></li>
-    <li><em>Escargots</em></li>
+    <li>Baguette</li>
+    <li>Macarons</li>
+    <li>Escargots</li>
   </ul>
 </body>
 
