--- a/main.html
+++ b/main.html
@@ -11,9 +11,9 @@
     <script type="text/javascript" src="./script.js">
 </script>
  <h1>Paris</h1>
-  <br>
+  
   <p>
-    Paris, often called The City of Light, is one of the most beautiful and romantic cities in the world. 
+    Paris, often called<strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
     It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. 
     Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.
   </p>
@@ -21,17 +21,17 @@
   <ol>
     <li><strong>Eiffel Tower</strong></li>
     <li><em>Louvre Museum</em></li>
-    <li>Notre Dame Cathedral</li>
-    <li>Champs-Élysées & Arc de Triomphe</li>
-    <li>Montmartre & Sacré-Cœur Basilica</li>
+    <li><strong>Notre Dame Cathedral</strong></li>
+    <li><em>Champs-Élysées</em> & <strong>Arc de Triomphe</strong></li>
+    <li><strong>Montmartre </strong>& <em>Sacré-Cœur Basilica</em></li>
   </ol>
 
   <ul>
     <li><em>Croissant</em></li>
     <li><strong>Crêpes</strong></li>
-    <li>Baguette</li>
-    <li>Macarons</li>
-    <li>Escargots</li>
+    <li><em>Baguette</em></li>
+    <li><strong>Macarons</strong></li>
+    <li><em>Escargots</em></li>
   </ul>
 </body>
 
