--- a/main.html
+++ b/main.html
@@ -4,6 +4,7 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<title>Favorite Holiday Destination - Paris</title>
 </head>
 
 <body>
@@ -11,7 +12,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
  <h1>Paris</h1>
-  
+  <br>
   <p>
     Paris, often called<strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
     It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. 
