--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<!-- the entire body must be written by student -->
 
  <h1>Paris</h1>
-  
+  <br>
   <p>
     Paris, often called<strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
     It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. 
@@ -19,18 +19,18 @@
   </p>
 
   <ol>
-    <li><strong>Eiffel Tower</strong></li>
+    <li><em>Eiffel Tower</emli>
     <li><em>Louvre Museum</em></li>
-    <li><strong>Notre Dame Cathedral</strong></li>
-    <li><em>Champs-Élysées</em> & <strong>Arc de Triomphe</strong></li>
-    <li><strong>Montmartre </strong>& <em>Sacré-Cœur Basilica</em></li>
+    <li><em>Notre Dame Cathedral</em></li>
+    <li><em>Champs-Élysées</em> & <em>Arc de Triomphe</em></li>
+    <li><em>Montmartre </em>& <em>Sacré-Cœur Basilica</em></li>
   </ol>
 
   <ul>
     <li><em>Croissant</em></li>
-    <li><strong>Crêpes</strong></li>
+    <li><em>Crêpes</em></li>
     <li><em>Baguette</em></li>
-    <li><strong>Macarons</strong></li>
+    <li><em>Macarons</em></li>
     <li><em>Escargots</em></li>
   </ul>
 </body>
