--- a/main.html
+++ b/main.html
@@ -13,25 +13,25 @@
  <h1>Paris</h1>
   <br>
   <p>
-    Paris, often called<strong>The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
+    Paris, often called<strong> The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
     It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. 
-    Whether it’s strolling along the Seine River or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.
+    Whether it’s strolling along the <em>Seine River</em> or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.
   </p>
 
   <ol>
     <li><em>Eiffel Tower</emli>
-    <li><em>Louvre Museum</em></li>
+    <li><strong>Louvre Museum</strong></li>
     <li><em>Notre Dame Cathedral</em></li>
-    <li><em>Champs-Élysées</em> & <em>Arc de Triomphe</em></li>
-    <li><em>Montmartre </em>& <em>Sacré-Cœur Basilica</em></li>
+    <li><em>Champs-Élysées</em> & <strong>Arc de Triomphe</strong></li>
+    <li><em>Montmartre </em>& <strong>Sacré-Cœur Basilica</strong></li>
   </ol>
 
   <ul>
     <li><em>Croissant</em></li>
-    <li><em>Crêpes</em></li>
+    <li><strong>Crêpes</strong></li>
     <li><em>Baguette</em></li>
-    <li><em>Macarons</em></li>
-    <li><em>Escargots</em></li>
+    <li><strong>Macarons</strong></li>
+    <li><strong>Escargots</strong></li>
   </ul>
 </body>
 
