--- a/main.html
+++ b/main.html
@@ -11,28 +11,25 @@
 	<!-- the entire body must be written by student -->
 
  <h1>Paris</h1>
-  <br>
   <p>
     Paris, often called<strong> The City of Light</strong>, is one of the most beautiful and romantic cities in the world. 
     It is known for its rich history, stunning architecture, world-class art museums, and charming street cafés. 
     Whether it’s strolling along the <em>Seine River</em> or admiring the Eiffel Tower at night, Paris offers a magical experience to every visitor.
   </p>
-
-  <ol>
-    <li><em>Eiffel Tower</emli>
-    <li><strong>Louvre Museum</strong></li>
-    <li><em>Notre Dame Cathedral</em></li>
-    <li><em>Champs-Élysées</em> & <strong>Arc de Triomphe</strong></li>
-    <li><em>Montmartre </em>& <strong>Sacré-Cœur Basilica</strong></li>
-  </ol>
-
-  <ul>
-    <li><em>Croissant</em></li>
-    <li><strong>Crêpes</strong></li>
-    <li><em>Baguette</em></li>
-    <li><strong>Macarons</strong></li>
-    <li><strong>Escargots</strong></li>
-  </ul>
+	  <ol>
+        <li><i>Eiffel Tower</i></li>
+        <li><b>Louvre Museum</b></li>
+        <li><i>Notre Dame Cathedral</i></li>
+        <li><b>Arc de Triomphe</b></li>
+        <li><i>Montmartre</i></li>
+    </ol>
+    <ul>
+        <li><i>Croissant</i></li>
+        <li><b>Crêpes</b></li>
+        <li><i>Baguette</i></li>
+        <li><b>Macarons</b></li>
+        <li><b>Escargots</b></li>
+    </ul>
 </body>
 
 </html>
